# zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  config.toml  docker-compose.yml  readme.md  sqlx-data.json
configuration/: base.toml  local.toml  production.toml
migrations/: 20220504093418_create_subscriptions_table.sql  20220512150358_add_status_to_subscriptions.sql  20220512155226_make_status_not_null_in_subscriptions.sql  20220512160002_create_subscriptions_tokens_table.sql  20220529134904_create_users_table.sql  20220529151643_add_salt_to_users.sql  20220529160217_remove_salt_column.sql  20220606075051_seed_user.sql
scripts/: db.sh
src/: config.rs  domain.rs  issue_delivery_worker.rs  lib.rs  main.rs  run.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: auth.rs  middleware.rs  mod.rs
src/domain/: application.rs  mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/mail/: mod.rs  send_email.rs
src/routes/: health.rs  mod.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  mod.rs  post.rs
src/routes/logout/: logout.rs
src/utils/: error_helpers.rs  mod.rs
tests/: health_check_test.rs  helpers.rs  subscription_confirm.rs  subscription_test.rs
tests/api/: authentication.rs  health_check.rs  login.rs  mod.rs  newsletter.rs  subscription.rs  subscription_confirm.rs
tests/utils/: helpers.rs
